feat: controller to add existing audio nodes
