# gateway/src/controller/nodes.controller.ts
@@ -1,4 +1,4 @@
-import {Body, Controller, Get, Param, Post, UseBefore} from "routing-controllers"
+import {Body, Controller, Get, Param, Post, Put, UseBefore} from "routing-controllers"
 import "reflect-metadata";
 import {removeCors} from "../middleware";
 import {AppRoutes} from "../constants";
@@ -18,7 +18,16 @@ export class NodesController {
     }
 
     @Post(`${AppRoutes.NODES}/:${NodesRoutes.NODE_TYPE}`)
-    createNode(@Param(NodesRoutes.NODE_TYPE) id: NodeType, @Body() body: { port: number }) {
-        return (audioNodesService.createNode(body.port))
+    createNode(@Param(NodesRoutes.NODE_TYPE) id: NodeType, @Body() body: { port: number }): Promise<Node> {
+        return audioNodesService.createNode(body.port)
+    }
+
+    @Put(`${AppRoutes.NODES}/:${NodesRoutes.NODE_TYPE}`)
+    connectNode(@Param(NodesRoutes.NODE_TYPE) id: NodeType, @Body() body: { url: string }): Node[] {
+        audioNodesService.connectNode({
+            type: id,
+            url: body.url
+        });
+        return audioNodesService.getActiveNodes();
     }
 }
